bitfields/tests/compile_error_cases/bitfield_attribute_non_struct.stderr
error: expected `struct`
 --> tests/compile_error_cases/bitfield_attribute_non_struct.rs:7:5
  |
7 | pub enum NonStruct {
  |     ^^^^
